@@ -1,17 +1,21 @@
-
 package springWeb.demo.domain.Servicios;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 import springWeb.demo.domain.Dto.CitaDTO;
 import springWeb.demo.domain.Mapper.CitaMapper;
 import springWeb.demo.domain.Modelos.Cita;
 import springWeb.demo.domain.Modelos.EstadoCita;
+import springWeb.demo.domain.Modelos.Mascota;
+import springWeb.demo.domain.Modelos.Usuario;
 import springWeb.demo.domain.Repositorios.CitaRepository;
+import springWeb.demo.domain.Repositorios.MascotaRepository;
+import springWeb.demo.domain.Repositorios.UsuarioRepository;
 import springWeb.demo.domain.Servicios.interfaces.CitaService;
-
 
 @Service
 @RequiredArgsConstructor
@@ -19,17 +23,25 @@ public class CitaServiceImpl implements CitaService {
 
     private final CitaRepository citaRepository;
     private final CitaMapper citaMapper;
+    private final MascotaRepository mascotaRepository;
+    private final UsuarioRepository usuarioRepository;
 
     @Override
     public CitaDTO agendarCita(CitaDTO citaDTO) {
-        // Convertir DTO a entidad
         Cita cita = citaMapper.toEntity(citaDTO);
         cita.setEstado(EstadoCita.PROGRAMADA);
 
-        // Guardar en BD
-        Cita nuevaCita = citaRepository.save(cita);
+        Mascota mascota = mascotaRepository.findById(citaDTO.getMascotaId())
+                .orElseThrow(() -> new RuntimeException("Mascota no encontrada con id " + citaDTO.getMascotaId()));
 
-        // Convertir de vuelta a DTO
+        // Al agendar, el veterinario puede ser pre-seleccionado
+        Usuario veterinario = usuarioRepository.findById(citaDTO.getVeterinarioId())
+                .orElseThrow(() -> new RuntimeException("Veterinario no encontrado con id " + citaDTO.getVeterinarioId()));
+
+        cita.setMascota(mascota);
+        cita.setVeterinario(veterinario);
+
+        Cita nuevaCita = citaRepository.save(cita);
         return citaMapper.toDTO(nuevaCita);
     }
 
@@ -38,7 +50,7 @@ public class CitaServiceImpl implements CitaService {
         return citaRepository.findByVeterinarioId(veterinarioId)
                 .stream()
                 .map(citaMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -46,7 +58,7 @@ public class CitaServiceImpl implements CitaService {
         return citaRepository.findByMascotaId(mascotaId)
                 .stream()
                 .map(citaMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -56,9 +68,26 @@ public class CitaServiceImpl implements CitaService {
     }
 
     @Override
-    public CitaDTO actualizarCita(CitaDTO citaDTO) {
-        Cita cita = citaMapper.toEntity(citaDTO);
-        Cita actualizada = citaRepository.save(cita);
+    public CitaDTO actualizarCita(Long citaId, CitaDTO citaDTO, UserDetails userDetails) {
+        Cita citaExistente = citaRepository.findById(citaId)
+                .orElseThrow(() -> new RuntimeException("No se puede actualizar: Cita no encontrada con id " + citaId));
+
+        citaExistente.setFechaHora(citaDTO.getFechaHora());
+        citaExistente.setMotivo(citaDTO.getMotivo());
+
+        EstadoCita nuevoEstado = citaDTO.getEstado();
+        if (nuevoEstado != null) {
+            citaExistente.setEstado(nuevoEstado);
+
+            if (nuevoEstado == EstadoCita.ACEPTADA) {
+                String emailVeterinario = userDetails.getUsername();
+                Usuario veterinarioAsignado = usuarioRepository.findByEmail(emailVeterinario)
+                        .orElseThrow(() -> new RuntimeException("Veterinario no encontrado con email: " + emailVeterinario));
+                citaExistente.setVeterinario(veterinarioAsignado);
+            }
+        }
+
+        Cita actualizada = citaRepository.save(citaExistente);
         return citaMapper.toDTO(actualizada);
     }
 
@@ -68,5 +97,13 @@ public class CitaServiceImpl implements CitaService {
             cita.setEstado(EstadoCita.CANCELADA);
             citaRepository.save(cita);
         });
+    }
+
+    @Override
+    public List<CitaDTO> listarCitasPorEstado(String estado) {
+        EstadoCita estadoEnum = EstadoCita.valueOf(estado.toUpperCase());
+        return citaRepository.findByEstado(estadoEnum).stream()
+                .map(citaMapper::toDTO)
+                .collect(Collectors.toList());
     }
 }
